--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -252,7 +252,7 @@ com_Galleries As CanvasComponent:
                                 Qty_Calculated_Ext: Text(0),
                                 Quantity: Text(0),
                                 Entry_Type: ThisItem.Entry_Type,
-                                Qty_Phys_Inventory: Text(0),
+                                Qty_Phys_Inventory: Blank(),
                                 Qty_Phys_Inventory_Ext: Text(0),
                                 Gen_Bus_Posting_Group: ThisItem.Gen_Bus_Posting_Group,
                                 Lot_No: Blank(),
