--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -61,6 +61,7 @@
             false
         );
         Set(Counter, 0);
+        Set(Prelot, false);
 
     vrt_Entry As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
