--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -205,6 +205,7 @@ com_Footer As CanvasComponent:
                 PaddingTop: =
                 Text: ="Lotiranje"
                 VerticalAlign: =VerticalAlign.Middle
+                Visible: =Prelot
                 Width: =96
                 X: =15
                 Y: =12
@@ -218,6 +219,7 @@ com_Footer As CanvasComponent:
                 Height: =Parent.Height
                 Size: =13
                 Text: =""
+                Visible: =Prelot
                 Width: =15
                 ZIndex: =4
 
