--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -233,8 +233,7 @@ com_Modal As CanvasComponent:
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
-                            OnChange: |-
-                                =Notify("kolicina: " & inp_rezQty_2.ValidationState);
+                            OnChange: =
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
                             TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
@@ -351,8 +350,7 @@ com_Modal As CanvasComponent:
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
-                            OnChange: |-
-                                =Notify("kolicina potrebna: " & inp_potrebnoQty_2.ValidationState);
+                            OnChange: =
                             Placeholder: ="Unesite potrebnu količinu"
                             TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             ValidationState: |-
@@ -474,7 +472,7 @@ com_Modal As CanvasComponent:
                                             Quantity_NewLOT: Value(-inp_potrebnoQty_2.Value)
                                         }
                                     );
-                                    If(Value(inp_potrebnoQty_2.Value) > 0 && !Prelot, Set(Prelot, true), Set(Prelot,false)
+                                    If(Value(inp_potrebnoQty_2.Value) > 0 && !Prelot, Set(Prelot, true), Set(Prelot,false));
                                 )
                             );
                             Reset(inp_rezQty_2);
