--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -242,7 +242,7 @@ com_Galleries As CanvasComponent:
                                 Source_Type: ThisItem.Source_Type,
                                 'Source_No.': ThisItem.'Source_No.',
                                 Source_Code: ThisItem.Source_Code,
-                                Item_No: ThisItem.Item_No,
+                                'Item_No.': ThisItem.'Item_No.',
                                 'Phys._Inventory': ThisItem.'Phys._Inventory',
                                 Location_Code: ThisItem.Location_Code,
                                 Posting_Date: ThisItem.Posting_Date,
