--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -73,7 +73,7 @@ com_Galleries As CanvasComponent:
                 Default: |-
                     =LookUp(
                         colLines,
-                        Item_No = ScannedItem
+                        'Line_No.' = ScannedItem
                     )
                 DelayItemLoading: =true
                 Items: =colLines
