--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -145,7 +145,7 @@ com_Modal As CanvasComponent:
                             LayoutMinHeight: =32
                             LayoutMinWidth: =80
                             Size: =20
-                            Text: ="LOT- " & inp_LotNo.ValidationState
+                            Text: ="LOT"
                             Width: =200
                             X: =40
                             Y: =40
