--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -472,6 +472,11 @@
                                 scr_XMLNalogZaProdaju,
                                 ScreenTransition.Fade
                             ),
+                            "53",
+                            Navigate(
+                                scr_XMLNalogZaProdaju,
+                                ScreenTransition.Fade
+                            ),
                             "04",
                             Navigate(
                                 scr_XMLNalogZaPrenos,
