--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -332,7 +332,11 @@
                                     {
                                         Id: 8,
                                         Text: "Pick Request"
-                                    }
+                                    },
+                                    {
+                                        Id: 9,
+                                        Text: "Nalozi povrata"
+                                    },
                                 ]
                             OnChange: |
                                 =Set(
