--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -135,20 +135,27 @@ com_Modal_1 As CanvasComponent:
                             =!com_Modal_1.IsInventura && !com_Modal_1.IsNabavniNalog
                         ZIndex: =4
 
-                        TextCanvas3_15 As Text:
-                            Align: ='TextCanvas.Align'.Center
-                            AutoHeight: =true
-                            BorderStyle: =""
+                        "TextInputCanvas1 As 'Text input'":
                             DisplayMode: =DisplayMode.Edit
                             Height: =32
                             LayoutMinHeight: =32
-                            LayoutMinWidth: =96
-                            Size: =20
-                            Text: ="Jeste li sigurni da želite poslati na obradu u navision?"
-                            Width: =200
-                            X: =40
-                            Y: =40
+                            LayoutMinWidth: =320
+                            Placeholder: ="Broj naloga"
+                            Width: =320
+                            X: =0
+                            Y: =0
                             ZIndex: =1
+
+                        TextCanvas4 As Text:
+                            DisplayMode: =DisplayMode.Edit
+                            FontColor: =RGBA(255, 0, 0, 1)
+                            Height: =32
+                            LayoutMinHeight: =32
+                            Text: =
+                            Width: =320
+                            X: =0
+                            Y: =0
+                            ZIndex: =2
 
                 hrz_ModalFooter_1 As groupContainer.horizontalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -165,7 +172,7 @@ com_Modal_1 As CanvasComponent:
                     PaddingRight: =10
                     ZIndex: =3
 
-                    btn_ModalSave_1 As Button:
+                    btn_ModalSave_2 As Button:
                         Align: =Align.Justify
                         BasePaletteColor: =
                         BorderStyle: =""
@@ -175,30 +182,9 @@ com_Modal_1 As CanvasComponent:
                         Layout: ='ButtonCanvas.Layout'.TextOnly
                         LayoutMinHeight: =32
                         LayoutMinWidth: =96
-                        OnSelect: |
-                            =Set(
-                                isModalOpen,
-                                false
-                            );
-                        Text: ="Odustani"
-                        Width: =96
-                        X: =0
-                        Y: =0
-                        ZIndex: =1
-
-                    btn_ModalSave_2 As Button:
-                        Align: =Align.Justify
-                        BasePaletteColor: =
-                        BorderStyle: =""
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Icon: ="Save"
-                        Layout: ='ButtonCanvas.Layout'.IconAfter
-                        LayoutMinHeight: =32
-                        LayoutMinWidth: =96
                         OnSelect: =
-                        Text: ="Spasi"
-                        Width: =96
+                        Text: ="Zatraži povrat"
+                        Width: =150
                         X: =0
                         Y: =0
                         ZIndex: =2
