--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -182,17 +182,19 @@ com_Modal_1 As CanvasComponent:
                         Layout: ='ButtonCanvas.Layout'.TextOnly
                         LayoutMinHeight: =32
                         LayoutMinWidth: =96
-                        OnSelect: |
+                        OnSelect: |-
                             =Set(
                                 isLoading,
                                 true
                             );
                             IfError(
-                                Return.Run(
-                                    "SPO",
-                                    SelectedFile,
-                                    ReadyForProcessing,
-                                    ReadyForNAVProcessing
+                                Set(ReturnFileContent,
+                                    Return.Run(
+                                        "SPO",
+                                        SelectedFile,
+                                        ReadyForProcessing,
+                                        ReadyForNAVProcessing
+                                    )
                                 ),
                                 Notify(
                                     "Došlo je do greške!",
@@ -202,8 +204,7 @@ com_Modal_1 As CanvasComponent:
                                 Navigate(
                                     scr_XMLNalogZaProdaju,
                                     ScreenTransition.Fade
-                                );
-                                
+                                )
                             );
                             Set(
                                 isLoading,
