--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -203,7 +203,7 @@ com_Modal_1 As CanvasComponent:
                                 ),
                                 Navigate(
                                     scr_XMLNalogZaProdaju,
-                                    ScreenTransition.Fade
+                                    ScreenTransition.Fade,{xmlData:ReturnFileContent}
                                 )
                             );
                             Set(
