--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -8,22 +8,31 @@
             true
         );
         If(
-            !IsBlank(SelectedFile),
-            IfError(
-                UpdateContext(
-                    {
-                        xmlData: (ParseJSON(
-                            GetXml.Run(
-                                SelectedFile,
-                                SelectedQueue
-                            ).response
-                        ).Sales_Header)
-                    }
-                ),
-                Notify(
-                    "Greška u obradi.",
-                    NotificationType.Error,
-                    2000
+            !IsBlank(xmlData),
+            true,
+            false
+        );
+        If(
+            !IsBlank(xmlData),
+            UpdateContext({xmlData: xmlData}),
+            If(
+                !IsBlank(SelectedFile),
+                IfError(
+                    UpdateContext(
+                        {
+                            xmlData: (ParseJSON(
+                                GetXml.Run(
+                                    SelectedFile,
+                                    SelectedQueue
+                                ).response
+                            ).Sales_Header)
+                        }
+                    ),
+                    Notify(
+                        "Greška u obradi.",
+                        NotificationType.Error,
+                        2000
+                    )
                 )
             )
         );
