--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -7,6 +7,7 @@
             isLoading,
             true
         );
+        Set(isModalOpen,false);
         If(
             !IsBlank(xmlData),
             true,
