--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -204,6 +204,7 @@ com_Modal_1 As CanvasComponent:
                                     NotificationType.Error,
                                     2000
                                 ),
+                                Set(isModalOpen,false);
                                 Navigate(
                                     scr_XMLNalogZaProdaju,
                                     ScreenTransition.Fade
