--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -124,7 +124,7 @@ com_Modal_1 As CanvasComponent:
                         RadiusTopRight: =4
                         ZIndex: =4
 
-                        "TextInputCanvas1 As 'Text input'":
+                        "FileNameNumberInput As 'Text input'":
                             DisplayMode: =DisplayMode.Edit
                             Height: =32
                             LayoutMinHeight: =32
@@ -135,16 +135,15 @@ com_Modal_1 As CanvasComponent:
                             Y: =0
                             ZIndex: =1
 
-                        TextCanvas4 As Text:
-                            DisplayMode: =DisplayMode.Edit
-                            FontColor: =RGBA(255, 0, 0, 1)
-                            Height: =32
-                            LayoutMinHeight: =32
-                            LayoutMinWidth: =96
-                            Text: =
+                        Label2 As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(255, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            Size: =13
+                            Text: ="Povrat za navedeni nalog je izvršen ili nalog uopšte ne postoji."
+                            Visible: =false
                             Width: =320
-                            X: =0
-                            Y: =0
                             ZIndex: =2
 
                 hrz_ModalFooter_1 As groupContainer.horizontalAutoLayoutContainer:
@@ -177,28 +176,43 @@ com_Modal_1 As CanvasComponent:
                                 isLoading,
                                 true
                             );
+                            Set(
+                                doc,
+                                FileNameNumberInput.Value
+                            );
                             IfError(
                                 Set(
                                     reportFileContent,
-                                    (ParseJSON(
+                                    //ParseJSON(
                                         Return.Run(
                                             "SPO",
-                                            SelectedFile,
+                                            doc,
                                             ReadyForProcessing,
                                             ReadyForNAVProcessing
                                         ).response
-                                    ).Sales_Header)
+                                    //)
                                 ),
                                 Notify(
                                     "Došlo je do greške!",
                                     NotificationType.Error,
                                     2000
                                 ),
-                                Set(isModalOpen,false);
-                                Navigate(
-                                    scr_XMLNalogZaProdaju,
-                                    ScreenTransition.Fade
-                                )    
+                                
+                                If(
+                                    reportFileContent = "{}",
+                                    Reset(FileNameNumberInput);
+                                    Label2.Visible = true,
+                                    Set(
+                                        isModalOpen,
+                                        false
+                                    );
+                                    Label2.Visible = true;
+                                    Navigate(
+                                        scr_XMLNalogZaProdaju,
+                                        ScreenTransition.Fade,
+                                        {xmlData: ParseJSON(reportFileContent).Sales_Header}
+                                    )
+                                )
                             );
                         Text: ="Zatraži povrat"
                         Width: =150
